--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -93,7 +93,7 @@
 .product {
     width: 380px;
     margin-bottom: 40px;
-
+    float: left;
 }
 
 .product img {
@@ -104,10 +104,18 @@
     font-size: 18px;
     text-align: center;
     color: #150433;
-    margin-top: 5px;
+    font-weight: 600;
+    margin-top: 10px;
     padding-bottom: 10px;
 }
 
 .product p {
+   width: 300px;
+   margin-left: 40px;
     text-align: center;
+
+    font-weight: 300;
+    color: #a1a5aa;
+    font-size: 14px;
+ 
 }
