--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -75,25 +75,26 @@
     padding: 11px;
 }
 
-.prod { 
+.prod {
     width: 100%;
     float: left;
     margin: 50px auto 50px auto;
     text-align: center;
- 
 }
 
-.prod h2 {
+.prod h2,
+.portif h2 {
     text-align: center;
     font-size: 24px;
     color: #150433;
 }
 
-.prod > p {
+.prod > p,
+.portif > p {
     width: 500px;
     font-weight: 300;
     line-height: 1.2em;
-    color: #a1a5aa; 
+    color: #a1a5aa;
     margin: 0 auto 36px auto;
     clear: both;
 }
@@ -116,15 +117,14 @@
     line-height: 1.2em;
     font-size: 14px;
     font-weight: 300;
-    color: #a1a5aa; 
+    color: #a1a5aa;
 }
-
 
 .portif {
     text-align: center;
-    background-color: cadetblue;
+    margin: 0 auto 50px auto;
 }
 
-.portif a:nth-last-child(2){
-    margin-top: 10px;
+.portif h2, img {
+    margin: 0 0 30px 0;
 }
