--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -125,6 +125,10 @@
     margin: 0 auto 50px auto;
 }
 
-.portif h2, img {
+.portif h2 {
     margin: 0 0 30px 0;
+}
+
+.portif p:nth-last-of-type(1) {
+    margin: 30px auto 36px auto;
 }
