--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -83,14 +83,15 @@
 }
 
 .prod h2,
-.portif h2 {
+.portif h2,
+.qa h2 {
     text-align: center;
     font-size: 24px;
     color: #150433;
 }
 
 .prod > p,
-.portif > p {
+.portif > p{
     width: 500px;
     font-weight: 300;
     line-height: 1.2em;
@@ -131,4 +132,28 @@
 
 .portif p:nth-last-of-type(1) {
     margin: 30px auto 36px auto;
+}
+
+.quality {
+    background-color: blue;
+    margin: 0 auto 50px auto;
+}
+
+.qa {
+    background-color: blueviolet;
+}
+
+.qa h2 {
+    margin: 0 0 30px 0;
+}
+
+.qa p  {
+    width: 450px;
+ 
+    float: left;
+    font-weight: 300;
+    line-height: 1.2em;
+    color: #a1a5aa;
+    margin: 0 auto 36px auto;
+   
 }
