--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -64,6 +64,7 @@
     background: #150433;
     color: #fff;
     padding: 13px 30px 13px 30px;
+   
 }
 
 .empty-button {
@@ -84,14 +85,14 @@
 
 .prod h2,
 .portif h2,
-.qa h2 {
+.quality h2 {
     text-align: center;
     font-size: 24px;
     color: #150433;
 }
 
 .prod > p,
-.portif > p{
+.portif > p {
     width: 500px;
     font-weight: 300;
     line-height: 1.2em;
@@ -134,49 +135,37 @@
     margin: 30px auto 36px auto;
 }
 
-
-.qa{
-    background-color: blueviolet;
-    margin: 0 auto 50px auto;
+.quality {
+   background-color: chartreuse;
+  
 }
 
-.qa h2 {
-    margin: 0 0 30px 0;
-  
+.qa  {
+    width: 100%;
+    display: flex;
 }
 
 .qa p {
-    width: 450px;
-    float: left;
     padding-left: 40px;
-    font-weight: 300;
-    line-height: 1.2em;
-    color: #a1a5aa;
-    background-color: brown;
+    padding-right: 40px;
 }
 
-.qa > p {
-    margin-right: 30px;
-  
-} 
-
-
-.qua {
-    background-color: cadetblue;
-    clear: both;
+.quality h2 {
+    margin: 0 0 36px 0;
 }
 
-.qua h2 {
+
+#logo-quality {
+    padding-top: 50px;
     font-size: 48px;
     color: #150433;
     font-weight: bold;
-
 }
 
-.qua p {
-    
+ul + p {
+    text-align: center;
+    margin: 70px auto 36px auto;
 }
 
-.qua a {
-   
-}
+
+
