--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -209,3 +209,16 @@ ul h3 {
 .citacao cite {
     color: #F61067;
 }
+
+footer {
+    height: 400px;
+    background-color: #150433;
+    color: #fff;
+}
+
+.rodape::after{
+    content: "";
+    width: 643px;
+    height: 2px;
+   color: white;
+}
